--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "main": "index.js",
   "scripts": {
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "lint": "eslint src test *.js",
+    "lint": "eslint src test *.js test-e2e/cypress-5/*.js test-e2e/cypress-5/cypress/**/*.js",
     "lint:local": "npm run lint:all",
     "lint-staged": "lint-staged",
     "test": "jest",
+    "test-e2e:ci": "cd test-e2e/cypress-5 && npm i && npm run test:ci",
     "test:coverage": "npm run test",
-    "test:ci": "npm run test && npm run stryker",
-    "stryker": "stryker run"
+    "test:ci": "npm run test && npm run test:mutation && npm run test-e2e:ci",
+    "test:mutation": "stryker run"
   },
   "peerDependencies": {
     "cypress": "^5.0.0"
@@ -51,7 +52,9 @@
   "lint-staged": {
     "*.js": "eslint",
     "src/**/*.js": "eslint",
-    "test/**/*.js": "eslint"
+    "test/**/*.js": "eslint",
+    "test-e2e/cypress-5/*.js": "eslint",
+    "test-e2e/cypress-5/cypress/**/*.js": "eslint"
   },
   "husky": {
     "hooks": {
