--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,12 +4,12 @@ sonar.projectVersion=0.1.0
 
 sonar.javascript.file.suffixes=.js
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=node_modules/**
-sonar.coverage.exclusions=test/**/*,index.js,stryker.conf.js,jest.config.js
-sonar.cpd.exclusions=test/**/*
+sonar.exclusions=node_modules/**,test-e2e/cypress-5/node_modules/**
+sonar.coverage.exclusions=test/**/*,index.js,stryker.conf.js,jest.config.js,test-e2e/**/*
+sonar.cpd.exclusions=test/**/*,test-e2e/**/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.host.url=https://sonarcloud.io
 
 sonar.issue.ignore.multicriteria=j1
 sonar.issue.ignore.multicriteria.j1.ruleKey=javascript:S4144
-sonar.issue.ignore.multicriteria.j1.resourceKey=test/**/*
+sonar.issue.ignore.multicriteria.j1.resourceKey=test/**/*,test-e2e/**/*
