--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "lint:local": "npm run lint:all",
     "lint-staged": "lint-staged",
     "test": "jest",
-    "test-e2e:ci": "cd test-e2e/cypress-5 && npm i && npm run test:ci",
+    "test:e2e:ci": "cd test-e2e/cypress-5 && npm i && npm run test:ci",
     "test:coverage": "npm run test",
-    "test:ci": "npm run test && npm run test:mutation && npm run test-e2e:ci",
+    "test:ci": "npm run test && npm run test:mutation && npm run test:e2e:ci",
     "test:mutation": "stryker run"
   },
   "peerDependencies": {
