chore(release): Force publication to gpr from main branch temporarily

--- a/.github/workflows/publish-to-github-registry.yml
+++ b/.github/workflows/publish-to-github-registry.yml
@@ -1,7 +1,9 @@
 name: publish-to-github-registry
 on:
-  release:
-    types: [created]
+  #release:
+    #types: [created]
+  branches:
+    - main
 jobs:
   publish:
     runs-on: ubuntu-latest
