chore(release): Force publication to gpr from main branch temporarily

--- a/.github/workflows/publish-to-github-registry.yml
+++ b/.github/workflows/publish-to-github-registry.yml
@@ -2,8 +2,9 @@ name: publish-to-github-registry
 on:
   #release:
     #types: [created]
-  branches:
-    - main
+  push:
+    branches:
+      - main
 jobs:
   publish:
     runs-on: ubuntu-latest
