--- a/.github/workflows/publish-to-github-registry.yml
+++ b/.github/workflows/publish-to-github-registry.yml
@@ -1,10 +1,7 @@
 name: publish-to-github-registry
 on:
-  #release:
-    #types: [created]
-  push:
-    branches:
-      - main
+  release:
+    types: [created]
 jobs:
   publish:
     runs-on: ubuntu-latest
