--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectVersion=1.0.0
 
 sonar.javascript.file.suffixes=.js
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=node_modules/**,test-e2e/cypress-5/node_modules/**
+sonar.exclusions=node_modules/**,test-e2e/cypress-5/node_modules/**,test-e2e/cypress-6/node_modules/**
 sonar.coverage.exclusions=test/**/*,index.js,plugin.js,stryker.conf.js,jest.config.js,test-e2e/**/*
 sonar.cpd.exclusions=test/**/*,test-e2e/**/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
