chore(renovate): Use Cypress <6.0.0 in Cypress 5 e2e tests

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,12 @@
 {
   "extends": [
     "github>javierbrea/nodejs-ci-cd-shared-config"
+  ],
+  "packageRules": [
+    {
+      "matchPaths": ["test-e2e/cypress-variants/cypress-5/package.json"],
+      "matchPackageNames": ["cypress"],
+      "allowedVersions": "<=6.0.0"
+    }
   ]
 }
