--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-5/package.json"],
       "matchPackageNames": ["cypress"],
-      "allowedVersions": "<=6.0.0"
+      "allowedVersions": "<6.0.0"
     }
   ]
 }
