--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - main
       - release
+      # TODO, remove before merging
+      - feat-parallel-strategy
   pull_request:
 jobs:
   test:
@@ -14,10 +16,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF##*/})"
-        id: extract-branch
+      # TODO: move to another action
+      # - name: Extract branch name
+        # shell: bash
+        # run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF##*/})"
+        # id: extract-branch
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
@@ -38,13 +41,15 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
-      - name: Test unit
-        run: npm run test:unit
-      - name: Test mutation
-        run: npm run test:mutation
-        env:
-          BRANCH_NAME: ${{ steps.extract-branch.outputs.branch }}
-          STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_TOKEN }}
+      # TODO, uncomment before merging
+      # - name: Test unit
+        # run: npm run test:unit
+      # TODO: move to another action
+      # - name: Test mutation
+        # run: npm run test:mutation
+        # env:
+          # BRANCH_NAME: ${{ steps.extract-branch.outputs.branch }}
+          # STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_TOKEN }}
       - name: Test E2E
         run: npm run test:e2e:ci
         id: test-e2e
