chore(renovate): Configure renovate to not update Cypress to a version higher than 6.x in Cypress 6.x e2e tests folder

--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,11 @@
       "matchPaths": ["test-e2e/cypress-variants/cypress-5/package.json"],
       "matchPackageNames": ["cypress"],
       "allowedVersions": "<6.0.0"
+    },
+    {
+      "matchPaths": ["test-e2e/cypress-variants/cypress-6/package.json"],
+      "matchPackageNames": ["cypress"],
+      "allowedVersions": "<7.0.0"
     }
   ]
 }
