chore(deps): Support Cypress v8 in peerDependencies

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prepare": "is-ci || husky install"
   },
   "peerDependencies": {
-    "cypress": "5.x || 6.x || 7.x"
+    "cypress": "5.x || 6.x || 7.x || 8.x"
   },
   "dependencies": {
     "chalk": "4.1.1"
