--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
+      - name: Check types
+        run: npm run tsc
       - name: Test unit
         run: npm run test:unit
       - name: Test E2E
