--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test:e2e:ci": "npm run test:e2e:install && npm run test:e2e:run",
     "test:ci": "npm run test && npm run test:mutation && npm run test:e2e:ci",
     "test:mutation": "stryker run",
+    "tsc": "tsc",
     "prepare": "is-ci || husky install"
   },
   "peerDependencies": {
@@ -59,7 +60,8 @@
     "jest": "27.0.6",
     "lint-staged": "11.1.2",
     "prettier": "2.3.2",
-    "sinon": "11.1.2"
+    "sinon": "11.1.2",
+    "typescript": "4.3.5"
   },
   "lint-staged": {
     "*.js": "eslint",
