--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "baseUrl": ".",
-    "target": "es5",
-    "lib": ["es5"],
+    "target": "es6",
+    "module": "commonjs",
+    "outDir": "dist",
+    "moduleResolution": "node",
     "types": ["cypress"]
   },
   "include": [
-    "**/*.ts"
-  ]
+    "*.ts",
+  ],
+  "exclude": [
+    "node_modules",
+  ],
 }
