--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@stryker-mutator/jest-runner": "5.3.0",
     "babel-eslint": "10.1.0",
     "cross-env": "7.0.3",
+    "cypress": "8.3.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
