--- a/package.json
+++ b/package.json
@@ -47,19 +47,19 @@
     "chalk": "4.1.2"
   },
   "devDependencies": {
-    "@stryker-mutator/core": "5.3.0",
-    "@stryker-mutator/jest-runner": "5.3.0",
+    "@stryker-mutator/core": "5.4.1",
+    "@stryker-mutator/jest-runner": "5.4.1",
     "babel-eslint": "10.1.0",
     "cross-env": "7.0.3",
-    "cypress": "8.3.0",
-    "eslint": "7.32.0",
+    "cypress": "8.7.0",
+    "eslint": "8.1.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "7.25.1",
-    "husky": "7.0.2",
-    "is-ci": "3.0.0",
-    "jest": "27.1.0",
-    "lint-staged": "11.1.2",
+    "husky": "7.0.4",
+    "is-ci": "3.0.1",
+    "jest": "27.3.1",
+    "lint-staged": "11.2.6",
     "prettier": "2.3.2",
     "sinon": "11.1.2",
     "typescript": "4.4.2"
@@ -74,6 +74,6 @@
     "test-e2e/test/**/*.js": "eslint"
   },
   "engines": {
-    "node": "10.x || 12.x || 14.x || 15.x || 16.x"
+    "node": ">=10.0.0"
   }
 }
