--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "prepare": "is-ci || husky install"
   },
   "peerDependencies": {
-    "cypress": "5.x || 6.x || 7.x || 8.x"
+    "cypress": "5.x || 6.x || 7.x || 8.x || 9.x"
   },
   "dependencies": {
     "chalk": "4.1.2"
