--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,7 @@ jobs:
     strategy:
       matrix:
         # NodeJS v17 still not supported in tests due to incompatibility with react-scripts
-        # node: ["12.22.7", "14.16.1", "15.14.0", "16.13.0"]
-          node: ["16.13.0"]
+        node: ["14.16.1", "15.14.0", "16.13.0"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
