--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
     branches:
       - main
       - release
-      - 169-support-cypress-9
   pull_request:
 jobs:
   test:
@@ -38,8 +37,8 @@ jobs:
         run: npm run lint
       - name: Check types
         run: npm run tsc
-      #- name: Test unit
-      #  run: npm run test:unit
+      - name: Test unit
+        run: npm run test:unit
       - name: Test E2E
         run: npm run test:e2e:ci
         id: test-e2e
