chore(deps): Configure renovate to not upgrade Cypress major versions in E2E tests of versions 7.x and 8.x

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,16 @@
       "matchPaths": ["test-e2e/cypress-variants/cypress-6/package.json"],
       "matchPackageNames": ["cypress"],
       "allowedVersions": "<7.0.0"
+    },
+    {
+      "matchPaths": ["test-e2e/cypress-variants/cypress-7/package.json"],
+      "matchPackageNames": ["cypress"],
+      "allowedVersions": "<8.0.0"
+    },
+    {
+      "matchPaths": ["test-e2e/cypress-variants/cypress-8/package.json"],
+      "matchPackageNames": ["cypress"],
+      "allowedVersions": "<9.0.0"
     }
   ]
 }
