--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Test unit
         run: npm run test:unit
       - name: Test E2E
-        run: npm run test:e2e:ci
+        run: npm run test:e2e:debug
         id: test-e2e
       - name: Upload test results
         uses: actions/upload-artifact@v2
