--- a/.github/workflows/check-package-version.yml
+++ b/.github/workflows/check-package-version.yml
@@ -36,9 +36,9 @@ jobs:
         uses: christian-draeger/read-properties@1.1.1
         with:
           path: './sonar-project.properties'
-          property: 'sonar.projectVersion'
+          properties: 'sonar.projectVersion'
       - name: Check Sonar version
-        if: steps.sonar-version.outputs.value != steps.package-version.outputs.current-version
+        if: steps.sonar-version.outputs.sonar-projectVersion != steps.package-version.outputs.current-version
         run: |
           echo "Version not changed"
           exit 1
