--- a/renovate.json
+++ b/renovate.json
@@ -6,27 +6,27 @@
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-7/package.json"],
       "matchPackageNames": ["cypress"],
-      "allowedVersions": "<8.0.0"
+      "allowedVersions": "7.x"
     },
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-8/package.json"],
       "matchPackageNames": ["cypress"],
-      "allowedVersions": "<9.0.0"
+      "allowedVersions": "8.x"
     },
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-9/package.json"],
       "matchPackageNames": ["cypress"],
-      "allowedVersions": "<10.0.0"
+      "allowedVersions": "9.x"
     },
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-10/package.json"],
       "matchPackageNames": ["cypress"],
-      "allowedVersions": "<11.0.0"
+      "allowedVersions": "10.x"
     },
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-11/package.json"],
       "matchPackageNames": ["cypress"],
-      "allowedVersions": "<12.0.0"
+      "allowedVersions": "11.x"
     },
     {
       "matchPaths": ["package.json"],
