test: Downgrade 7.x tests to use 7.5

--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-7/package.json"],
       "matchPackageNames": ["cypress"],
-      "allowedVersions": "7.x"
+      "allowedVersions": "<7.6.0"
     },
     {
       "matchPaths": ["test-e2e/cypress-variants/cypress-8/package.json"],
