--- a/renovate.json
+++ b/renovate.json
@@ -4,11 +4,6 @@
   ],
   "packageRules": [
     {
-      "matchPaths": ["test-e2e/cypress-variants/cypress-7/package.json"],
-      "matchPackageNames": ["cypress"],
-      "allowedVersions": "<7.6.0"
-    },
-    {
       "matchPaths": ["test-e2e/cypress-variants/cypress-8/package.json"],
       "matchPackageNames": ["cypress"],
       "allowedVersions": "8.x"
@@ -27,6 +22,11 @@
       "matchPaths": ["test-e2e/cypress-variants/cypress-11/package.json"],
       "matchPackageNames": ["cypress"],
       "allowedVersions": "11.x"
+    },
+    {
+      "matchPaths": ["test-e2e/cypress-variants/cypress-12/package.json"],
+      "matchPackageNames": ["cypress"],
+      "allowedVersions": "12.x"
     },
     {
       "matchPaths": ["package.json"],
