chore: Handle concurrency in pipelines

--- a/.github/workflows/test-mutation.yml
+++ b/.github/workflows/test-mutation.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
       - release
+concurrency:  
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   test-mutation:
     runs-on: ubuntu-latest
