--- a/.github/workflows/check-package-version.yml
+++ b/.github/workflows/check-package-version.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - main
+concurrency:  
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   check-package-version:
     runs-on: ubuntu-latest
